parser.output
   0  $accept : %entry% $end

   1  main : statement_list EOF

   2  statement_list : statement
   3                 | statement statement_list

   4  statement : line SEMICOLON
   5            | block
   6            | conditional
   7            | loop
   8            | INLINE_COMMENT
   9            | COMMENT_BLOCK

  10  block : LEFT_BRACE statement_list RIGHT_BRACE

  11  line : expression
  12       | declaration
  13       | assignment
  14       | interaction

  15  expression : expression ADD expression
  16             | expression MUL expression
  17             | expression SUB expression
  18             | expression DIV expression
  19             | expression EXPONENT expression
  20             | expression REM expression
  21             | SUB expression
  22             | LEFT_PAREN expression RIGHT_PAREN
  23             | DIMENSION expression
  24             | MAGNITUDE expression
  25             | ANGLE expression
  26             | DETERMINANT expression
  27             | expression BOOL_OR expression
  28             | expression BOOL_AND expression
  29             | BOOL_NOT expression
  30             | expression EQ expression
  31             | expression NEQ expression
  32             | expression GT expression
  33             | expression LT expression
  34             | expression GTEQ expression
  35             | expression LTEQ expression
  36             | ABS_OPEN expression ABS_CLOSE
  37             | TRANSPOSE expression
  38             | constant
  39             | VARS

  40  constant : single
  41           | vector
  42           | matrix

  43  single : INT
  44         | FLOAT
  45         | BOOL

  46  vector : LEFT_SQUARE_BRACKET newexpressionlist RIGHT_SQUARE_BRACKET

  47  matrix : LEFT_SQUARE_BRACKET vectorlist RIGHT_SQUARE_BRACKET

  48  newexpression : newexpression ADD newexpression
  49                | newexpression MUL newexpression
  50                | newexpression SUB newexpression
  51                | newexpression DIV newexpression
  52                | newexpression EXPONENT newexpression
  53                | newexpression REM newexpression
  54                | SUB newexpression
  55                | LEFT_PAREN newexpression RIGHT_PAREN
  56                | DIMENSION newexpression
  57                | MAGNITUDE newexpression
  58                | ANGLE newexpression
  59                | DETERMINANT newexpression
  60                | newexpression BOOL_OR newexpression
  61                | newexpression BOOL_AND newexpression
  62                | BOOL_NOT newexpression
  63                | newexpression EQ newexpression
  64                | newexpression NEQ newexpression
  65                | newexpression GT newexpression
  66                | newexpression LT newexpression
  67                | newexpression GTEQ newexpression
  68                | newexpression LTEQ newexpression
  69                | ABS_OPEN newexpression ABS_CLOSE
  70                | TRANSPOSE newexpression
  71                | newconstant
  72                | VARS

  73  newconstant : single

  74  newexpressionlist : newexpression
  75                    | newexpression DELIMITER newexpressionlist

  76  vectorlist : vector
  77             | vector SEMICOLON vectorlist

  78  declaration : onlydeclaration
  79              | declaration_assignment

  80  onlydeclaration : singletype VARS
  81                  | TYPE_VECTOR LT singletype GT VARS LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET
  82                  | TYPE_MATRIX LT singletype GT VARS LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET

  83  declaration_assignment : onlydeclaration ASSIGN expression
  84                         | onlydeclaration ASSIGN input

  85  assignment : VARS ASSIGN expression
  86             | VARS ASSIGN input
  87             | VARS LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET ASSIGN expression
  88             | VARS LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET ASSIGN input
  89             | VARS LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET ASSIGN expression
  90             | VARS LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET ASSIGN input

  91  interaction : PRINT
  92              | input

  93  input : INPUT

  94  conditional : IF LEFT_PAREN expression RIGHT_PAREN statement ELSE statement

  95  loop : FOR LEFT_PAREN declaration_assignment SEMICOLON expression SEMICOLON assignment RIGHT_PAREN statement
  96       | FOR LEFT_PAREN assignment SEMICOLON expression SEMICOLON assignment RIGHT_PAREN statement
  97       | WHILE LEFT_PAREN expression RIGHT_PAREN statement

  98  singletype : TYPE_INT
  99             | TYPE_BOOL
 100             | TYPE_FLOAT

 101  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (101)

	SUB  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 7
	BOOL_NOT  shift 8
	TYPE_INT  shift 9
	TYPE_BOOL  shift 10
	TYPE_FLOAT  shift 11
	TYPE_VECTOR  shift 12
	TYPE_MATRIX  shift 13
	FOR  shift 14
	WHILE  shift 15
	IF  shift 16
	PRINT  shift 17
	ANGLE  shift 18
	MAGNITUDE  shift 19
	DIMENSION  shift 20
	TRANSPOSE  shift 21
	DETERMINANT  shift 22
	INPUT  shift 23
	ABS_OPEN  shift 24
	LEFT_PAREN  shift 25
	LEFT_BRACE  shift 26
	LEFT_SQUARE_BRACKET  shift 27
	INLINE_COMMENT  shift 28
	COMMENT_BLOCK  shift 29
	.  error

	main  goto 30
	statement_list  goto 31
	statement  goto 32
	line  goto 33
	block  goto 34
	conditional  goto 35
	loop  goto 36
	expression  goto 37
	declaration  goto 38
	assignment  goto 39
	interaction  goto 40
	constant  goto 41
	single  goto 42
	vector  goto 43
	matrix  goto 44
	onlydeclaration  goto 45
	declaration_assignment  goto 46
	singletype  goto 47
	input  goto 48


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	expression : SUB . expression  (21)

	SUB  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 49
	BOOL_NOT  shift 8
	ANGLE  shift 18
	MAGNITUDE  shift 19
	DIMENSION  shift 20
	TRANSPOSE  shift 21
	DETERMINANT  shift 22
	ABS_OPEN  shift 24
	LEFT_PAREN  shift 25
	LEFT_SQUARE_BRACKET  shift 27
	.  error

	expression  goto 50
	constant  goto 41
	single  goto 42
	vector  goto 43
	matrix  goto 44


state 4
	single : INT .  (43)

	.  reduce 43


state 5
	single : FLOAT .  (44)

	.  reduce 44


state 6
	single : BOOL .  (45)

	.  reduce 45


state 7
	expression : VARS .  (39)
	assignment : VARS . ASSIGN expression  (85)
	assignment : VARS . ASSIGN input  (86)
	assignment : VARS . LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET ASSIGN expression  (87)
	assignment : VARS . LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET ASSIGN input  (88)
	assignment : VARS . LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET ASSIGN expression  (89)
	assignment : VARS . LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET ASSIGN input  (90)

	ASSIGN  shift 51
	LEFT_SQUARE_BRACKET  shift 52
	ADD  reduce 39
	MUL  reduce 39
	SUB  reduce 39
	DIV  reduce 39
	EQ  reduce 39
	GT  reduce 39
	LT  reduce 39
	GTEQ  reduce 39
	LTEQ  reduce 39
	NEQ  reduce 39
	REM  reduce 39
	BOOL_AND  reduce 39
	BOOL_OR  reduce 39
	EXPONENT  reduce 39
	SEMICOLON  reduce 39


state 8
	expression : BOOL_NOT . expression  (29)

	SUB  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 49
	BOOL_NOT  shift 8
	ANGLE  shift 18
	MAGNITUDE  shift 19
	DIMENSION  shift 20
	TRANSPOSE  shift 21
	DETERMINANT  shift 22
	ABS_OPEN  shift 24
	LEFT_PAREN  shift 25
	LEFT_SQUARE_BRACKET  shift 27
	.  error

	expression  goto 53
	constant  goto 41
	single  goto 42
	vector  goto 43
	matrix  goto 44


state 9
	singletype : TYPE_INT .  (98)

	.  reduce 98


state 10
	singletype : TYPE_BOOL .  (99)

	.  reduce 99


state 11
	singletype : TYPE_FLOAT .  (100)

	.  reduce 100


state 12
	onlydeclaration : TYPE_VECTOR . LT singletype GT VARS LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET  (81)

	LT  shift 54
	.  error


state 13
	onlydeclaration : TYPE_MATRIX . LT singletype GT VARS LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET  (82)

	LT  shift 55
	.  error


state 14
	loop : FOR . LEFT_PAREN declaration_assignment SEMICOLON expression SEMICOLON assignment RIGHT_PAREN statement  (95)
	loop : FOR . LEFT_PAREN assignment SEMICOLON expression SEMICOLON assignment RIGHT_PAREN statement  (96)

	LEFT_PAREN  shift 56
	.  error


state 15
	loop : WHILE . LEFT_PAREN expression RIGHT_PAREN statement  (97)

	LEFT_PAREN  shift 57
	.  error


state 16
	conditional : IF . LEFT_PAREN expression RIGHT_PAREN statement ELSE statement  (94)

	LEFT_PAREN  shift 58
	.  error


state 17
	interaction : PRINT .  (91)

	.  reduce 91


state 18
	expression : ANGLE . expression  (25)

	SUB  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 49
	BOOL_NOT  shift 8
	ANGLE  shift 18
	MAGNITUDE  shift 19
	DIMENSION  shift 20
	TRANSPOSE  shift 21
	DETERMINANT  shift 22
	ABS_OPEN  shift 24
	LEFT_PAREN  shift 25
	LEFT_SQUARE_BRACKET  shift 27
	.  error

	expression  goto 59
	constant  goto 41
	single  goto 42
	vector  goto 43
	matrix  goto 44


state 19
	expression : MAGNITUDE . expression  (24)

	SUB  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 49
	BOOL_NOT  shift 8
	ANGLE  shift 18
	MAGNITUDE  shift 19
	DIMENSION  shift 20
	TRANSPOSE  shift 21
	DETERMINANT  shift 22
	ABS_OPEN  shift 24
	LEFT_PAREN  shift 25
	LEFT_SQUARE_BRACKET  shift 27
	.  error

	expression  goto 60
	constant  goto 41
	single  goto 42
	vector  goto 43
	matrix  goto 44


state 20
	expression : DIMENSION . expression  (23)

	SUB  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 49
	BOOL_NOT  shift 8
	ANGLE  shift 18
	MAGNITUDE  shift 19
	DIMENSION  shift 20
	TRANSPOSE  shift 21
	DETERMINANT  shift 22
	ABS_OPEN  shift 24
	LEFT_PAREN  shift 25
	LEFT_SQUARE_BRACKET  shift 27
	.  error

	expression  goto 61
	constant  goto 41
	single  goto 42
	vector  goto 43
	matrix  goto 44


state 21
	expression : TRANSPOSE . expression  (37)

	SUB  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 49
	BOOL_NOT  shift 8
	ANGLE  shift 18
	MAGNITUDE  shift 19
	DIMENSION  shift 20
	TRANSPOSE  shift 21
	DETERMINANT  shift 22
	ABS_OPEN  shift 24
	LEFT_PAREN  shift 25
	LEFT_SQUARE_BRACKET  shift 27
	.  error

	expression  goto 62
	constant  goto 41
	single  goto 42
	vector  goto 43
	matrix  goto 44


state 22
	expression : DETERMINANT . expression  (26)

	SUB  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 49
	BOOL_NOT  shift 8
	ANGLE  shift 18
	MAGNITUDE  shift 19
	DIMENSION  shift 20
	TRANSPOSE  shift 21
	DETERMINANT  shift 22
	ABS_OPEN  shift 24
	LEFT_PAREN  shift 25
	LEFT_SQUARE_BRACKET  shift 27
	.  error

	expression  goto 63
	constant  goto 41
	single  goto 42
	vector  goto 43
	matrix  goto 44


state 23
	input : INPUT .  (93)

	.  reduce 93


state 24
	expression : ABS_OPEN . expression ABS_CLOSE  (36)

	SUB  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 49
	BOOL_NOT  shift 8
	ANGLE  shift 18
	MAGNITUDE  shift 19
	DIMENSION  shift 20
	TRANSPOSE  shift 21
	DETERMINANT  shift 22
	ABS_OPEN  shift 24
	LEFT_PAREN  shift 25
	LEFT_SQUARE_BRACKET  shift 27
	.  error

	expression  goto 64
	constant  goto 41
	single  goto 42
	vector  goto 43
	matrix  goto 44


state 25
	expression : LEFT_PAREN . expression RIGHT_PAREN  (22)

	SUB  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 49
	BOOL_NOT  shift 8
	ANGLE  shift 18
	MAGNITUDE  shift 19
	DIMENSION  shift 20
	TRANSPOSE  shift 21
	DETERMINANT  shift 22
	ABS_OPEN  shift 24
	LEFT_PAREN  shift 25
	LEFT_SQUARE_BRACKET  shift 27
	.  error

	expression  goto 65
	constant  goto 41
	single  goto 42
	vector  goto 43
	matrix  goto 44


state 26
	block : LEFT_BRACE . statement_list RIGHT_BRACE  (10)

	SUB  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 7
	BOOL_NOT  shift 8
	TYPE_INT  shift 9
	TYPE_BOOL  shift 10
	TYPE_FLOAT  shift 11
	TYPE_VECTOR  shift 12
	TYPE_MATRIX  shift 13
	FOR  shift 14
	WHILE  shift 15
	IF  shift 16
	PRINT  shift 17
	ANGLE  shift 18
	MAGNITUDE  shift 19
	DIMENSION  shift 20
	TRANSPOSE  shift 21
	DETERMINANT  shift 22
	INPUT  shift 23
	ABS_OPEN  shift 24
	LEFT_PAREN  shift 25
	LEFT_BRACE  shift 26
	LEFT_SQUARE_BRACKET  shift 27
	INLINE_COMMENT  shift 28
	COMMENT_BLOCK  shift 29
	.  error

	statement_list  goto 66
	statement  goto 32
	line  goto 33
	block  goto 34
	conditional  goto 35
	loop  goto 36
	expression  goto 37
	declaration  goto 38
	assignment  goto 39
	interaction  goto 40
	constant  goto 41
	single  goto 42
	vector  goto 43
	matrix  goto 44
	onlydeclaration  goto 45
	declaration_assignment  goto 46
	singletype  goto 47
	input  goto 48


state 27
	vector : LEFT_SQUARE_BRACKET . newexpressionlist RIGHT_SQUARE_BRACKET  (46)
	matrix : LEFT_SQUARE_BRACKET . vectorlist RIGHT_SQUARE_BRACKET  (47)

	SUB  shift 67
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 68
	BOOL_NOT  shift 69
	ANGLE  shift 70
	MAGNITUDE  shift 71
	DIMENSION  shift 72
	TRANSPOSE  shift 73
	DETERMINANT  shift 74
	ABS_OPEN  shift 75
	LEFT_PAREN  shift 76
	LEFT_SQUARE_BRACKET  shift 77
	.  error

	single  goto 78
	vector  goto 79
	newexpressionlist  goto 80
	vectorlist  goto 81
	newexpression  goto 82
	newconstant  goto 83


state 28
	statement : INLINE_COMMENT .  (8)

	.  reduce 8


state 29
	statement : COMMENT_BLOCK .  (9)

	.  reduce 9


state 30
	%entry% : '\001' main .  (101)

	.  reduce 101


state 31
	main : statement_list . EOF  (1)

	EOF  shift 84
	.  error


state 32
	statement_list : statement .  (2)
	statement_list : statement . statement_list  (3)

	SUB  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 7
	BOOL_NOT  shift 8
	TYPE_INT  shift 9
	TYPE_BOOL  shift 10
	TYPE_FLOAT  shift 11
	TYPE_VECTOR  shift 12
	TYPE_MATRIX  shift 13
	FOR  shift 14
	WHILE  shift 15
	IF  shift 16
	PRINT  shift 17
	ANGLE  shift 18
	MAGNITUDE  shift 19
	DIMENSION  shift 20
	TRANSPOSE  shift 21
	DETERMINANT  shift 22
	INPUT  shift 23
	ABS_OPEN  shift 24
	LEFT_PAREN  shift 25
	LEFT_BRACE  shift 26
	LEFT_SQUARE_BRACKET  shift 27
	INLINE_COMMENT  shift 28
	COMMENT_BLOCK  shift 29
	RIGHT_BRACE  reduce 2
	EOF  reduce 2

	statement_list  goto 85
	statement  goto 32
	line  goto 33
	block  goto 34
	conditional  goto 35
	loop  goto 36
	expression  goto 37
	declaration  goto 38
	assignment  goto 39
	interaction  goto 40
	constant  goto 41
	single  goto 42
	vector  goto 43
	matrix  goto 44
	onlydeclaration  goto 45
	declaration_assignment  goto 46
	singletype  goto 47
	input  goto 48


state 33
	statement : line . SEMICOLON  (4)

	SEMICOLON  shift 86
	.  error


state 34
	statement : block .  (5)

	.  reduce 5


state 35
	statement : conditional .  (6)

	.  reduce 6


state 36
	statement : loop .  (7)

	.  reduce 7


state 37
	line : expression .  (11)
	expression : expression . ADD expression  (15)
	expression : expression . MUL expression  (16)
	expression : expression . SUB expression  (17)
	expression : expression . DIV expression  (18)
	expression : expression . EXPONENT expression  (19)
	expression : expression . REM expression  (20)
	expression : expression . BOOL_OR expression  (27)
	expression : expression . BOOL_AND expression  (28)
	expression : expression . EQ expression  (30)
	expression : expression . NEQ expression  (31)
	expression : expression . GT expression  (32)
	expression : expression . LT expression  (33)
	expression : expression . GTEQ expression  (34)
	expression : expression . LTEQ expression  (35)

	ADD  shift 87
	MUL  shift 88
	SUB  shift 89
	DIV  shift 90
	EQ  shift 91
	GT  shift 92
	LT  shift 93
	GTEQ  shift 94
	LTEQ  shift 95
	NEQ  shift 96
	REM  shift 97
	BOOL_AND  shift 98
	BOOL_OR  shift 99
	EXPONENT  shift 100
	SEMICOLON  reduce 11


state 38
	line : declaration .  (12)

	.  reduce 12


state 39
	line : assignment .  (13)

	.  reduce 13


state 40
	line : interaction .  (14)

	.  reduce 14


state 41
	expression : constant .  (38)

	.  reduce 38


state 42
	constant : single .  (40)

	.  reduce 40


state 43
	constant : vector .  (41)

	.  reduce 41


state 44
	constant : matrix .  (42)

	.  reduce 42


state 45
	declaration : onlydeclaration .  (78)
	declaration_assignment : onlydeclaration . ASSIGN expression  (83)
	declaration_assignment : onlydeclaration . ASSIGN input  (84)

	ASSIGN  shift 101
	SEMICOLON  reduce 78


state 46
	declaration : declaration_assignment .  (79)

	.  reduce 79


state 47
	onlydeclaration : singletype . VARS  (80)

	VARS  shift 102
	.  error


state 48
	interaction : input .  (92)

	.  reduce 92


state 49
	expression : VARS .  (39)

	.  reduce 39


state 50
	expression : expression . ADD expression  (15)
	expression : expression . MUL expression  (16)
	expression : expression . SUB expression  (17)
	expression : expression . DIV expression  (18)
	expression : expression . EXPONENT expression  (19)
	expression : expression . REM expression  (20)
	expression : SUB expression .  (21)
	expression : expression . BOOL_OR expression  (27)
	expression : expression . BOOL_AND expression  (28)
	expression : expression . EQ expression  (30)
	expression : expression . NEQ expression  (31)
	expression : expression . GT expression  (32)
	expression : expression . LT expression  (33)
	expression : expression . GTEQ expression  (34)
	expression : expression . LTEQ expression  (35)

	MUL  shift 88
	DIV  shift 90
	REM  shift 97
	EXPONENT  shift 100
	ADD  reduce 21
	SUB  reduce 21
	EQ  reduce 21
	GT  reduce 21
	LT  reduce 21
	GTEQ  reduce 21
	LTEQ  reduce 21
	NEQ  reduce 21
	BOOL_AND  reduce 21
	BOOL_OR  reduce 21
	ABS_CLOSE  reduce 21
	RIGHT_PAREN  reduce 21
	RIGHT_SQUARE_BRACKET  reduce 21
	SEMICOLON  reduce 21


state 51
	assignment : VARS ASSIGN . expression  (85)
	assignment : VARS ASSIGN . input  (86)

	SUB  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 49
	BOOL_NOT  shift 8
	ANGLE  shift 18
	MAGNITUDE  shift 19
	DIMENSION  shift 20
	TRANSPOSE  shift 21
	DETERMINANT  shift 22
	INPUT  shift 23
	ABS_OPEN  shift 24
	LEFT_PAREN  shift 25
	LEFT_SQUARE_BRACKET  shift 27
	.  error

	expression  goto 103
	constant  goto 41
	single  goto 42
	vector  goto 43
	matrix  goto 44
	input  goto 104


state 52
	assignment : VARS LEFT_SQUARE_BRACKET . expression RIGHT_SQUARE_BRACKET ASSIGN expression  (87)
	assignment : VARS LEFT_SQUARE_BRACKET . expression RIGHT_SQUARE_BRACKET ASSIGN input  (88)
	assignment : VARS LEFT_SQUARE_BRACKET . expression RIGHT_SQUARE_BRACKET LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET ASSIGN expression  (89)
	assignment : VARS LEFT_SQUARE_BRACKET . expression RIGHT_SQUARE_BRACKET LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET ASSIGN input  (90)

	SUB  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	VARS  shift 49
	BOOL_NOT  shift 8
	ANGLE  shift 18
	MAGNITUDE  shift 19
	DIMENSION  shift 20
	TRANSPOSE  shift 21
	DETERMINANT  shift 22
	ABS_OPEN  shift 24
	LEFT_PAREN  shift 25
	LEFT_SQUARE_BRACKET  shift 27
	.  error

	expression  goto 105
	constant  goto 41
	single  goto 42
	vector  goto 43
	matrix  goto 44


state 53
	expression : expression . ADD expression  (15)
	expression : expression . MUL expression  (16)
	expression : expression . SUB expression  (17)
	expression : expression . DIV expression  (18)
	expression : expression . EXPONENT expression  (19)
	expression : expression . REM expression  (20)
	expression : expression . BOOL_OR expression  (27)
	expression : expression . BOOL_AND expression  (28)
	expression : BOOL_NOT expression .  (29)
	expression : expression . EQ expression  (30)
	expression : expression . NEQ expression  (31)
	expression : expression . GT expression  (32)
	expression : expression . LT expression  (33)
	expression : expression . GTEQ expression  (34)
	expression : expression . LTEQ expression  (35)

	ADD  shift 87
	MUL  shift 88
	SUB  shift 89
	DIV  shift 90
	EQ  shift 91
	GT  shift 92
	LT  shift 93
	GTEQ  shift 94
	LTEQ  shift 95
	NEQ  shift 96
	REM  shift 97
	EXPONENT  shift 100
	BOOL_AND  reduce 29
	BOOL_OR  reduce 29
	ABS_CLOSE  reduce 29
	RIGHT_PAREN  reduce 29
	RIGHT_SQUARE_BRACKET  reduce 29
	SEMICOLON  reduce 29


state 54
	onlydeclaration : TYPE_VECTOR LT . singletype GT VARS LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET  (81)
